tests/rosetta/out/Zig/averages-simple-moving-average.error
zig build: exit status 1
/tmp/averages-simple-moving-average.zig:47:9: error: local variable is never mutated
/tmp/averages-simple-moving-average.zig:47:9: note: consider using 'const'
/tmp/averages-simple-moving-average.zig:45:9: error: local variable is never mutated
/tmp/averages-simple-moving-average.zig:45:9: note: consider using 'const'
/tmp/averages-simple-moving-average.zig:85:236: error: local constant 'res' shadows local variable from outer scope
/tmp/averages-simple-moving-average.zig:73:9: note: previous declaration here
/tmp/averages-simple-moving-average.zig:105:9: error: local variable is never mutated
/tmp/averages-simple-moving-average.zig:105:9: note: consider using 'const'
/tmp/averages-simple-moving-average.zig:104:9: error: local variable is never mutated
/tmp/averages-simple-moving-average.zig:104:9: note: consider using 'const'
/tmp/averages-simple-moving-average.zig:92:9: error: local variable is never mutated
/tmp/averages-simple-moving-average.zig:92:9: note: consider using 'const'
